# eew_linebot

./: .env.example  .envexample  .gitignore  GLWTS_LICENSE.md  LICENSE  Pipfile  Readme.md  main.py  pyproject.toml  requirements.txt
data/: taiwan_city.txt
src/: app.py  config.py  eew.py  eew_loop.py  file_os.py  proxies.py  user.py
src/core/: eew.py
src/eew_linebot/: app.py  bot_logic.py  config.py  eew_client.py  geo.py  main.py  models.py  monitor.py  notifier.py  subscribers.py  telegram.py
tests/: test_app.py  test_bot_logic.py  test_flask.py  test_monitor.py  test_subscribers.py  test_telegram.py  test_user.py
